--- a/index.css
+++ b/index.css
@@ -33,7 +33,7 @@
 
 .res-card {
     margin: 5px;
-    padding: 5px;
+    padding: 4px;
     width: 200px;
     background-color: lightgray;
 }
@@ -47,7 +47,12 @@
     padding: 10px
 }
 
+.filter-btn{
+    margin:10px;
+    cursor: pointer;
+}
+
 .res-logo {
     width: 100%;
-    height: 50%;
+    height: 40%;
 }
