--- a/index.css
+++ b/index.css
@@ -4,6 +4,11 @@
     border: 1px solid black
 }
 
+.login{
+    padding: 0 20px;
+    cursor: pointer;
+}
+
 .logo{
     width: 200px;
 }
@@ -55,4 +60,19 @@
 .res-logo {
     width: 100%;
     height: 40%;
+}
+
+.shimmer-container{
+   display: flex; 
+}
+
+.shimmer-card{
+    margin: 20px;
+    width: 200px;
+    height: 400px;
+    background-color: gray;
+}
+
+.filter{
+    display: flex;
 }
