--- a/index.css
+++ b/index.css
@@ -1,83 +1,3 @@
-.header{
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid black
-}
-
-.login{
-    padding: 0 20px;
-    cursor: pointer;
-}
-
-.logo{
-    width: 200px;
-}
-
-.nav-items{
-    padding-right: 20px;
-    padding-top: 15px;
-    font-size: 24px;
-}
-
-
-.nav-items > ul{
-    display: flex; 
-    list-style-type:none; 
-}
-
-.nav-items >ul >li{ 
-    padding: 10px;
-    margin: 10px;
-    
-}
-
-.res-container {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.res-card {
-    margin: 5px;
-    padding: 4px;
-    width: 200px;
-    background-color: lightgray;
-}
-
-.res-card:hover {
-    cursor: pointer;
-    border: 1px solid black;
-}
-
-.search {
-    padding: 10px
-}
-
-.filter-btn{
-    margin:10px;
-    cursor: pointer;
-}
-
-.res-logo {
-    width: 100%;
-    height: 40%;
-}
-
-.shimmer-container{
-   display: flex; 
-}
-
-.shimmer-card{
-    margin: 20px;
-    width: 200px;
-    height: 400px;
-    background-color: gray;
-}
-
-.filter{
-    display: flex;
-}
-
-.user-card {
-    padding: 10px;
-    border: 1px solid black;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
